@@ -160,25 +160,6 @@
             <artifactId>bootstrapfx-core</artifactId>
             <version>0.4.0</version>
         </dependency>
-        <!-- Selenium WebDriver for browser automation -->
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-java</artifactId>
-            <version>4.16.1</version>
-        </dependency>
-        <!-- Automatic ChromeDriver management -->
-        <dependency>
-            <groupId>io.github.bonigarcia</groupId>
-            <artifactId>webdrivermanager</artifactId>
-            <version>5.6.2</version>
-        </dependency>
-        <!-- Required by Selenium 4.x -->
-        <dependency>
-            <groupId>dev.failsafe</groupId>
-            <artifactId>failsafe</artifactId>
-            <version>3.3.2</version>
-        </dependency>
-
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -220,14 +201,6 @@
                             <noManPages>true</noManPages>
                             <stripDebug>true</stripDebug>
                             <noHeaderFiles>true</noHeaderFiles>
-                            <options>
-                                <option>--add-opens</option>
-                                <option>java.base/java.lang=ALL-UNNAMED</option>
-                                <option>--add-modules</option>
-                                <option>dev.failsafe</option>
-                                <option>--add-reads</option>
-                                <option>org.seleniumhq.selenium.http=dev.failsafe</option>
-                            </options>
                         </configuration>
                     </execution>
                 </executions>
